deploy: 08149c2c6a333033e65c821be459c156c1345be9

--- a/index.html
+++ b/index.html
@@ -26,7 +26,53 @@
 <ul>
 <li><a href="profile.xml">ALPS</a></li>
 <li><a href="docs/asd.html">Application State Diagram</a></li>
-<li>Semantic Descriptors</li>
+<li>Semantic Descriptors
+
+<ul>
+<li><a href="docs/semantic.Covid19.html">Covid19</a> (semantic), COVID-19</li>
+<li><a href="docs/semantic.dateCreated.html">dateCreated</a> (semantic)</li>
+<li><a href="docs/idempotent.doFollowList.html">doFollowList</a> (idempotent), リストをフォローする</li>
+<li><a href="docs/unsafe.doTweet.html">doTweet</a> (unsafe), つぶやく</li>
+<li><a href="docs/semantic.Explore.html">Explore</a> (semantic)</li>
+<li><a href="docs/semantic.ForYou.html">ForYou</a> (semantic), おすすめ</li>
+<li><a href="docs/safe.goExplore.html">goExplore</a> (safe), 話題を検索を見る</li>
+<li><a href="docs/safe.goListFollowers.html">goListFollowers</a> (safe)</li>
+<li><a href="docs/safe.goListItem.html">goListItem</a> (safe)</li>
+<li><a href="docs/safe.goListMembers.html">goListMembers</a> (safe)</li>
+<li><a href="docs/safe.goLists.html">goLists</a> (safe)</li>
+<li><a href="docs/safe.goMentions.html">goMentions</a> (safe), @ツイートを見る</li>
+<li><a href="docs/safe.goMessages.html">goMessages</a> (safe), メッセージを見る</li>
+<li><a href="docs/safe.goMoreTweet.html">goMoreTweet</a> (safe), もっとツイートを表示する</li>
+<li><a href="docs/safe.goNotifications.html">goNotifications</a> (safe), 通知を見る</li>
+<li><a href="docs/semantic.Home.html">Home</a> (semantic)</li>
+<li><a href="docs/semantic.id.html">id</a> (semantic)</li>
+<li><a href="docs/semantic.likes.html">likes</a> (semantic)</li>
+<li><a href="docs/semantic.list.html">list</a> (semantic)</li>
+<li><a href="docs/semantic.ListFollowers.html">ListFollowers</a> (semantic)</li>
+<li><a href="docs/semantic.ListItem.html">ListItem</a> (semantic), Twitterのリスト機能</li>
+<li><a href="docs/semantic.ListMembers.html">ListMembers</a> (semantic)</li>
+<li><a href="docs/semantic.listOfList.html">listOfList</a> (semantic), リスト一覧</li>
+<li><a href="docs/semantic.Lists.html">Lists</a> (semantic), list</li>
+<li><a href="docs/semantic.Mentions.html">Mentions</a> (semantic), @ツイート</li>
+<li><a href="docs/semantic.Messages.html">Messages</a> (semantic)</li>
+<li><a href="docs/semantic.name.html">name</a> (semantic)</li>
+<li><a href="docs/semantic.news.html">news</a> (semantic), ニュース</li>
+<li><a href="docs/semantic.newsList.html">newsList</a> (semantic), ニュースリスト</li>
+<li><a href="docs/semantic.notificationItem.html">notificationItem</a> (semantic)</li>
+<li><a href="docs/semantic.notificationList.html">notificationList</a> (semantic), すべての通知リスト</li>
+<li><a href="docs/semantic.Notifications.html">Notifications</a> (semantic), 通知</li>
+<li><a href="docs/semantic.retweetList.html">retweetList</a> (semantic), RTした人一覧</li>
+<li><a href="docs/semantic.title.html">title</a> (semantic)</li>
+<li><a href="docs/semantic.Trending.html">Trending</a> (semantic), トレンド</li>
+<li><a href="docs/semantic.trendWord.html">trendWord</a> (semantic), トレンドワード</li>
+<li><a href="docs/semantic.trendWordList.html">trendWordList</a> (semantic), トレンドリスト</li>
+<li><a href="docs/semantic.tweetBody.html">tweetBody</a> (semantic), ツイート本文</li>
+<li><a href="docs/semantic.tweeterId.html">tweeterId</a> (semantic)</li>
+<li><a href="docs/semantic.tweetItem.html">tweetItem</a> (semantic)</li>
+<li><a href="docs/semantic.tweetList.html">tweetList</a> (semantic)</li>
+<li><a href="docs/semantic.user.html">user</a> (semantic)</li>
+<li><a href="docs/semantic.userList.html">userList</a> (semantic), ユーザーリスト</li>
+</ul></li>
 </ul>
 
     </div>
